# AbstractVM

./: CMakeCache.txt  CMakeLists.txt  ErrorHandle.cpp  ErrorHandle.hpp  IOperand.hpp  Makefile  Operands.hpp  README.md  Stackstuff.cpp  Stackstuff.hpp  VMFactory.cpp  VMFactory.hpp  abstractvm  abstractvm.cbp  cmake_install.cmake  main.cpp  test.txt
